add gray stars to rating

--- a/src/components/reviewCarousel.css
+++ b/src/components/reviewCarousel.css
@@ -19,17 +19,13 @@
     width: 45%;
 }
 
-.controls {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 20px 0;
+.star {
+    font-size: 20px;
+    color: gold;
 }
 
-.arrow {
-    cursor: pointer;
-    font-size: 24px;
-    margin: 0 10px;
+.star.gray {
+    filter: grayscale(100%);
 }
 
 .pagination {
